Performance - Method invokes inefficient Number constructor; use static valueOf instead. Dodgy - Redundant nullcheck of value known to be non-null