@@ -98,16 +98,14 @@ import org.jboss.seam.log.Log;
 					log.info("getRowCount:03_+");
 					return 0;
 				}
-				if(remoteAuditClUsr!=null &&
-					("rowSelectFact".equals(remoteAuditClUsr)/*||
+				else if(("rowSelectFact".equals(remoteAuditClUsr)/*||
 				    "selRecAllFact".equals(remoteAudit)||
 					"clRecAllFact".equals(remoteAudit)||
 					"clSelOneFact".equals(remoteAudit)*/)&&
 					auditListCount!=null){
 					rowCount = Integer.valueOf(auditListCount);
-				}else{
-					rowCount = new Integer(
-							getDataProvider().getRowCount());
+				} else{
+					rowCount = Integer.valueOf(getDataProvider().getRowCount());
 				}
 				log.info("getRowCount:03:rowCount:"+rowCount);
 			}
