@@ -91,17 +91,14 @@ import org.jboss.seam.log.Log;
 				if(remoteAuditPerm==null){
 					log.info("getRowCount:03_+");
 					return 0;
-				}
-				if(remoteAuditPerm!=null &&
-					("rowSelectFact".equals(remoteAuditPerm)/*||
+				} else if(("rowSelectFact".equals(remoteAuditPerm)/*||
 				    "selRecAllFact".equals(remoteAudit)||
 					"clRecAllFact".equals(remoteAudit)||
 					"clSelOneFact".equals(remoteAudit)*/)&&
 					auditListCount!=null){
 					rowCount = Integer.valueOf(auditListCount);
-				}else{
-					rowCount = new Integer(
-							getDataProvider().getRowCount());
+				}else {
+					rowCount = Integer.valueOf(getDataProvider().getRowCount());
 				}
 				log.info("getRowCount:03:rowCount:"+rowCount);
 			}
