@@ -97,17 +97,14 @@ import org.jboss.seam.log.Log;
 				if(remoteAuditUsr==null){
 					log.info("getRowCount:03_+");
 					return 0;
-				}
-				if(remoteAuditUsr!=null &&
-					("rowSelectFact".equals(remoteAuditUsr)/*||
+				} else if(("rowSelectFact".equals(remoteAuditUsr)/*||
 				    "selRecAllFact".equals(remoteAudit)||
 					"clRecAllFact".equals(remoteAudit)||
 					"clSelOneFact".equals(remoteAudit)*/)&&
 					auditListCount!=null){
 					rowCount = Integer.valueOf(auditListCount);
 				}else{
-					rowCount = new Integer(
-							getDataProvider().getRowCount());
+					rowCount = Integer.valueOf(getDataProvider().getRowCount());
 				}
 				log.info("getRowCount:03:rowCount:"+rowCount);
 			}
